EPUB解析增强：修复&nbsp;等未声明HTML实体及裸&导致的SAX错误，预验证OPF文件结构避免NPE，添加ZIP降级修复重试 匹配度计算日志：RecommendMatchCalculator输出各维度详细公式至日志 书架卡片重构：全出血封面+渐隐遮罩，显示评分/匹配度，书名line-clamp-2，进度条移至文字区 首页高分佳作：书名改为line-clamp-2支持两行 AI书籍问答弹窗：左侧AI机器人SVG图标，右侧新建对话改为+，移除预设问题横条 文件预览：修复超长文件名导致图片偏移，标题改为自动换行